@@ -1,10 +1,10 @@
-c86c5de43a263704473ab515a43c1bed *ChangeLog
-aa76d75e23a5bc446ed0aef241868559 *DESCRIPTION
+7c979f3656c627e5ce369119fa809ef5 *ChangeLog
+f5330ff46bbaead8f143298e32b668bc *DESCRIPTION
 761e45511e777f561835611fe2288257 *NAMESPACE
 298f7e7509911b1e4dddff149d691b3c *R/antoch.test.R
 67c545c7efdf655a1c650fdc0c93e8b4 *R/chngpt.test.2.R
 8e494d12d2ec20d8dcb6bd9245de8821 *R/chngpt.test.R
-80472ece897f1af13fcbad1e15bcf3b9 *R/chngptm.R
+f72f15f3d1f9326195376da89475a0f7 *R/chngptm.R
 f034b787ea4eb25a1050d69b18ca6abf *R/double.hinge.R
 134107813e9b64351e48873e35ab3eba *R/hinge.test.R
 d02e2ee092f6df2334a37fa24aa4f5a5 *R/onAttach.R
@@ -19,25 +19,25 @@ ee6e5c17e1479c09ab44d478b43ae080 *data/dat.mtct.rda
 7f71850e2bf4527628678b688a85077b *data/nutrition.rda
 ea25138d0df2c1eada8655acc16886da *data/sim.alphas.rda
 d68fe8e41ea91aabf748f9cb3af44c68 *inst/CITATION
-da8b8ce28b89b11ecbf387073f5f0f0d *inst/doc/chngpt-vignette.pdf
+4e3e5d0eb7b16c22f02847d460980bd2 *inst/doc/chngpt-vignette.pdf
 82e747aa9aeaf112cb1b9113ff6d881f *inst/doc/chngpt-vignette.pdf.asis
 a616e808bd826e929f56223020649675 *inst/unitTests/Makefile
 0c12c1ada770c9626aae4253db6d4e85 *inst/unitTests/report.html
 89b3c0a24e47ab7d5ca6dcf2a8e89e5e *inst/unitTests/report.txt
 630caf7a1d55b84135b32e5358454b71 *inst/unitTests/runRUnitTests.R
 a850e3f1e67cd621808a4fead6043261 *inst/unitTests/runit.chngpt.test.R
-1f53bb3ec65860a5b48e335d273c59cf *inst/unitTests/runit.chngptm.linear.R
+a9fe1a17066a4f36c56912776fff3bb3 *inst/unitTests/runit.chngptm.linear.R
 28335c750895a5a5481f08991cd477f4 *inst/unitTests/runit.chngptm.logistic.R
 2a939f9e069cc165be8a1f9bd9cb5ac3 *inst/unitTests/runit.double.hinge.R
 77c88b720624b6a4eb17bd358dd4a1af *inst/unitTests/runit.hinge.test.R
 73518f714976ae9f27ba55427a8bd314 *man/chngpt.Rd
 290d3a383331093b6e34a59aa71d6cd3 *man/chngpt.test.Rd
-b1c1c6819d1abe706b6a44c6c243aa19 *man/chngptm.Rd
+79036f9a0b9db47d0502504638390149 *man/chngptm.Rd
 0a5b14ed4ea5e1ba38bc96c306ea0ffb *man/coef.0.ls.Rd
 5a0d4b45bb4102aaf737afba2358904f *man/convert.coef.Rd
 f92fcbc39bd73865cc4adcf38bb001d2 *man/dat.mtct.2.Rd
 7f97518c1443f559bfe9c319228e2933 *man/dat.mtct.Rd
-316d6ab0cb0ccf844c9ce524cf17b9ba *man/double.hinge.Rd
+070cd183b7ee227bbbafe16b2e25dade *man/double.hinge.Rd
 9079abafa4964c4cfe4f8bf7e1506883 *man/hinge.test.Rd
 6521193798d69a5d858da571bcc3af47 *man/lidar.Rd
 a20a29174dd5f458c33e481f86c6f379 *man/nutrition.Rd
@@ -63,8 +63,8 @@ f9dd03ffeae81d3409a0930fa6f2c07b *src/M22c.cc
 62288e8cb29f90983d0ab28852cf5ba7 *src/distributions.h
 6ff33af903206802c07f51994128d028 *src/doublehinge.c
 b3e55dce9080169d7161c8a182f0c70a *src/error.h
-f624e756b20d55c830d905de2fe607b2 *src/fastgrid.cc
-ef50edac39bb7606d75cead5fb889bcc *src/fastgrid2.cc
+335ac556f612dfbab5159bbc08971c46 *src/fastgrid.cc
+9c9697b3430df1e82810de07786757af *src/fastgrid2.cc
 1760008e0a8ea56989dc5d2f064f834a *src/fastgrid_helper.cc
 a47ec5357108f620d938b357358840dd *src/fastgrid_helper.h
 c057066e13cf978636f96533c4d574f2 *src/grid.cc
